--- a/ahp/ahp.ipynb
+++ b/ahp/ahp.ipynb
@@ -208,11 +208,60 @@
    "source": [
     "## AHP and UTA results comparison"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70bc5b47",
+   "metadata": {},
+   "source": [
+    "Kendall's tau: 0.3167\n",
+    "Kendall's distance: 82"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c3cb0a4",
+   "metadata": {},
+   "source": [
+    "![](./../plots/uta.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f43b27b",
+   "metadata": {},
+   "source": [
+    "![](./../plots/prometheeII.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6f5ea8c",
+   "metadata": {},
+   "source": [
+    "![](./../plots/prometheeI.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a011824b",
+   "metadata": {},
+   "source": [
+    "![](./../plots/ahp.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a5b03ac",
+   "metadata": {},
+   "source": [
+    "The results from all methods highlighted that Languna 25 is the best choice. This decision is likely due to its lowest price-per-day value compared to the other alternatives. It also accurately reflects reality, as the decision maker is a student—well known for having limited financial resources. However, a difference can be observed in the last position according to the UTA method, which might be due to incomplete or not fully defined preference information.    "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -226,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
